salesforce-main/src/main/default/objects/Domain_Specific_Endpoint_Mapping__mdt/Domain_Specific_Endpoint_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Holds endpoint information that corresponds to our different environments.</description>
    <label>Domain Specific Endpoint Mapping</label>
    <pluralLabel>Domain Specific Endpoint Mappings</pluralLabel>
</CustomObject>