salesforce-main/src/main/default/objects/Domain_Specific_Endpoint_Mapping__mdt/fields/Org_Name__c.field-meta.xml
<CustomField>
    <fullName>Org_Name__c</fullName>
    <description>The name of the environment where the endpoint is being connected from.</description>
    <label>Org Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>