salesforce-main/src/main/default/objects/Domain_Specific_Endpoint_Mapping__mdt/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <description>The service that the endpoint relates to.</description>
    <label>Service</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AWS</fullName>
                <default>true</default>
                <label>AWS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>