salesforce-main/src/main/default/objects/Domain_Specific_Endpoint_Mapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Org_Name__c</columns>
    <columns>Service__c</columns>
    <columns>Endpoint__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>